--- a/Ecommerce/css/app.css
+++ b/Ecommerce/css/app.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  font-size: 62.5%; /*1 rem = 10px*/
 }
 *,
 *:before,
@@ -7,7 +8,21 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2;
+}
+
 /*Globales*/
+
+h1,
+h2,
+h3 {
+  font-family: "Playfair Display", serif;
+  margin: 0 0 5rem 0;
+}
+
 a {
   text-decoration: none;
   color: #000;
@@ -15,11 +30,34 @@ a {
 
 h1 {
   color: 000;
+  font-size: 5rem;
 }
 
 img {
   max-width: 100%;
+  display: block;
 }
+
+/*Utilidades*/
+.text-center {
+  text-align: center;
+}
+
+.btn {
+  background-color: #8cbc00;
+  display: block;
+  padding: 1rem;
+  color: white;
+  font-weight: 900;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease-out;
+}
+
+.btn:hover {
+  background-color: #768c02;
+}
+
+/*Hero*/
 
 h1 span {
   color: #037bc0;
@@ -29,19 +67,20 @@ h1 span {
 }
 
 .contenedor-centrado {
-  max-width: 1200px;
+  max-width: 120rem;
   margin: 0 auto;
 }
 
 .nombre-sitio {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
   text-align: center;
+  font-size: 4rem;
 }
 
 .nav-principal {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 
   display: flex;
   flex-direction: row;
@@ -53,13 +92,139 @@ h1 span {
   background-image: url(../img/principal.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  height: 550px;
+  background-position: center center;
+  height: 55rem;
 }
 
 /*Categorias*/
+
+.categorias {
+  padding-top: 5rem;
+}
+
+.categorias h2 {
+  text-align: center;
+}
+
+.categoria a {
+  text-align: center;
+  display: block;
+  padding: 2rem;
+  font-size: 2rem;
+}
+
+.categoria a:hover {
+  background-color: #037bc0;
+  color: white;
+  border-radius: 0 0 2rem 0;
+}
+
 .listado-categorias {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 20px;
-  row-gap: 30px;
+  column-gap: 2rem;
+  row-gap: 3rem;
+}
+
+/*Bloque Nosotros*/
+.sobre-nosotros {
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  margin-bottom: 5rem;
+}
+
+.nosotros-contenido {
+  background-color: #037bc0;
+  color: white;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  display: flex;
+  align-items: center;
+}
+
+/*Listado Productos Principal*/
+
+.listado-productos {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+
+.producto:nth-child(1) {
+  grid-column: 1/7;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+.producto:nth-child(1) img {
+  height: 43rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.producto:nth-child(2) {
+  grid-column: 1/4;
+}
+.producto:nth-child(2) img {
+  height: 30rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.producto:nth-child(3) {
+  grid-column: 4/7;
+}
+.producto:nth-child(3) img {
+  height: 30rem;
+  width: 100%;
+  object-fit: cover;
+}
+.producto:nth-child(4) {
+  grid-column: 1/3;
+}
+.producto:nth-child(5) {
+  grid-column: 3/5;
+}
+.producto:nth-child(6) {
+  grid-column: 5/7;
+}
+
+.producto {
+  background-color: #037bc0;
+}
+
+.texto-producto {
+  text-align: center;
+  color: white;
+  padding: 5rem;
+}
+
+.texto-producto h3 {
+  margin: 0;
+}
+
+.texto-producto p {
+  margin: 0 0 0.4rem 0;
+}
+
+.texto-producto .precio {
+  font-weight: 900;
+  font-size: 2.8rem;
+}
+
+/*FOOTER*/
+footer {
+  padding-top: 5rem;
+}
+
+.listado-footer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+}
+
+.navegacion-footer {
+  display: flex;
+  flex-direction: column;
 }
