--- a/Ecommerce/css/app.css
+++ b/Ecommerce/css/app.css
@@ -299,3 +299,42 @@ footer {
   width: 40rem;
   object-fit: cover;
 }
+
+/**Contacto**/
+
+.formulario {
+  max-width: 60rem;
+  margin: 0 auto;
+}
+
+.formulario fieldset {
+  border: 1px solid black;
+  margin-bottom: 2rem;
+}
+
+.formulario legend {
+  background-color: #005485;
+  display: block;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-weight: 900;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  margin-bottom: 4rem;
+}
+
+.campo {
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.campo label {
+  flex-basis: 10rem;
+}
+
+.campo .input,
+textarea {
+  flex: 1;
+  padding: 1rem 0;
+}
