--- a/Ecommerce/css/app.css
+++ b/Ecommerce/css/app.css
@@ -30,13 +30,33 @@ a {
 
 h1 {
   color: 000;
-  font-size: 5rem;
-}
-h2 {
   font-size: 4rem;
 }
+
+@media (min-width: 768px) {
+  h1 {
+    font-size: 5rem;
+  }
+}
+
+h2 {
+  font-size: 3.2rem;
+}
+
+@media (min-width: 768px) {
+  h2 {
+    font-size: 4rem;
+  }
+}
+
 h3 {
-  font-size: 3.6rem;
+  font-size: 2.4rem;
+}
+
+@media (min-width: 768px) {
+  h2 {
+    font-size: 3.6rem;
+  }
 }
 
 img {
@@ -90,9 +110,16 @@ h1 span {
   padding-bottom: 2rem;
 
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
+  row-gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .nav-principal {
+    flex-direction: row;
+    justify-content: space-around;
+  }
 }
 
 .hero {
@@ -100,7 +127,13 @@ h1 span {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  height: 55rem;
+  height: 25rem;
+}
+
+@media (min-width: 768px) {
+  .hero {
+    height: 55rem;
+  }
 }
 
 /*Categorias*/
@@ -120,6 +153,10 @@ h1 span {
   font-size: 2rem;
 }
 
+.categoria img {
+  width: 100%;
+}
+
 .categoria a:hover {
   background-color: #037bc0;
   color: white;
@@ -128,17 +165,29 @@ h1 span {
 
 .listado-categorias {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   column-gap: 2rem;
   row-gap: 3rem;
+}
+
+@media (min-width: 768px) {
+  .listado-categorias {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 /*Bloque Nosotros*/
 .sobre-nosotros {
   margin-top: 5rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   margin-bottom: 5rem;
+}
+
+@media (min-width: 768px) {
+  .sobre-nosotros {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .nosotros-contenido {
@@ -152,49 +201,51 @@ h1 span {
 
 /*Listado Productos Principal*/
 
-.listado-productos {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  column-gap: 2rem;
-  row-gap: 2rem;
-}
+@media (min-width: 768px) {
+  .listado-productos {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
+  }
 
-.producto:nth-child(1) {
-  grid-column: 1/7;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-}
-.producto:nth-child(1) img {
-  height: 43rem;
-  width: 100%;
-  object-fit: cover;
-}
+  .producto:nth-child(1) {
+    grid-column: 1/7;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+  }
+  .producto:nth-child(1) img {
+    height: 43rem;
+    width: 100%;
+    object-fit: cover;
+  }
 
-.producto:nth-child(2) {
-  grid-column: 1/4;
-}
-.producto:nth-child(2) img {
-  height: 30rem;
-  width: 100%;
-  object-fit: cover;
-}
+  .producto:nth-child(2) {
+    grid-column: 1/4;
+  }
+  .producto:nth-child(2) img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+  }
 
-.producto:nth-child(3) {
-  grid-column: 4/7;
-}
-.producto:nth-child(3) img {
-  height: 30rem;
-  width: 100%;
-  object-fit: cover;
-}
-.producto:nth-child(4) {
-  grid-column: 1/3;
-}
-.producto:nth-child(5) {
-  grid-column: 3/5;
-}
-.producto:nth-child(6) {
-  grid-column: 5/7;
+  .producto:nth-child(3) {
+    grid-column: 4/7;
+  }
+  .producto:nth-child(3) img {
+    height: 30rem;
+    width: 100%;
+    object-fit: cover;
+  }
+  .producto:nth-child(4) {
+    grid-column: 1/3;
+  }
+  .producto:nth-child(5) {
+    grid-column: 3/5;
+  }
+  .producto:nth-child(6) {
+    grid-column: 5/7;
+  }
 }
 
 .producto {
@@ -223,17 +274,41 @@ h1 span {
 /*FOOTER*/
 footer {
   padding-top: 5rem;
+  display: flex;
+  justify-content: center;
+}
+
+footer a,
+h3 {
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  footer a,
+  h3 {
+    text-align: start;
+  }
 }
 
 .listado-footer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(1, 1fr);
   gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .listado-footer {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .navegacion-footer {
   display: flex;
   flex-direction: column;
+}
+
+footer p {
+  text-align: center;
 }
 
 /**Nosotros**/
@@ -249,25 +324,59 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 5rem;
+}
+
+@media (min-width: 768px) {
+  .informacion-nosotros {
+    padding: 0;
+  }
 }
 
 /**Blog**/
 
 .contenedor-blog {
   display: grid;
-  grid-template-columns: 2fr 1fr;
   column-gap: 4rem;
+}
+
+@media (min-width: 768px) {
+  .contenedor-blog {
+    grid-template-columns: 2fr 1fr;
+  }
 }
 
 .entrada {
   border-bottom: 2px solid #e1e1e1;
   padding-bottom: 4rem;
   margin-bottom: 2rem;
+  padding: 2rem;
+}
+
+.entrada img {
+  padding: 0;
+}
+
+@media (min-width: 768px) {
+  .entrada {
+    padding: 0;
+  }
 }
 
 .entrada-meta {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+}
+.entrada-meta p {
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .entrada-meta {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .entrada-meta p {
@@ -290,8 +399,14 @@ footer {
   padding: 0;
   margin: 0;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .galeria {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .galeria img {
