--- a/Audifonos/css/app.css
+++ b/Audifonos/css/app.css
@@ -211,14 +211,57 @@ main h2 {
   grid-template-columns: 1fr;
 }
 
+@media (min-width: 768px) {
+  .listado-modelos {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
+
 .modelo-1,
 .modelo-2,
 .modelo-3 {
   display: flex;
-  gap: 2rem;
+  flex-direction: column;
+  gap: 5rem;
   padding: 4rem;
   background-color: var(--grisClaro);
   color: var(--primario);
   border-radius: 2rem;
   margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+  .modelo-1,
+  .modelo-2,
+  .modelo-3 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    place-items: center;
+  }
+}
+
+.modelo-3 {
+  background-color: var(--primario);
+  color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+  .modelo-3 {
+    grid-column: 2/3;
+    grid-row: 1/3;
+  }
+}
+
+.listado-modelos h3 {
+  font-size: 5rem;
+}
+
+.seccion-suscribirse {
+  background-image: linear-gradient(
+      to bottom,
+      transparent 50%,
+      var(--blanco) 0%
+    ),
+    url(../img/newsletter.jpg);
 }
