--- a/Cafeteria/src/scss/base/_index.scss
+++ b/Cafeteria/src/scss/base/_index.scss
@@ -1,4 +1,6 @@
 @forward "normalize";
 @forward "variables";
 @forward "globales";
+@forward "tipografia";
 @forward "utilidades";
+@forward "mixins";
