--- a/Cafeteria/src/scss/header/_header.scss
+++ b/Cafeteria/src/scss/header/_header.scss
@@ -84,3 +84,17 @@
   background-size: cover;
   min-height: 70rem;
 }
+
+.header__nosotros {
+  background-image: url("../img/header_nosotros.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 70rem;
+}
+
+.header__proceso {
+  background-image: url("../img/header_proceso.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 70rem;
+}
