--- a/Cafeteria/src/scss/header/_header.scss
+++ b/Cafeteria/src/scss/header/_header.scss
@@ -98,3 +98,10 @@
   background-size: cover;
   min-height: 70rem;
 }
+
+.header__menu {
+  background-image: url("../img/header_menu.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 70rem;
+}
