--- a/Cafeteria/src/scss/menu/_menu.scss
+++ b/Cafeteria/src/scss/menu/_menu.scss
@@ -15,3 +15,20 @@
     }
   }
 }
+
+.menu__seccion__2 {
+  background-color: v.$blanco;
+  padding: 10rem;
+  margin-top: -10rem;
+  position: relative;
+
+  .menu__grid2 {
+    padding: 5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    img {
+      object-fit: cover;
+    }
+  }
+}
